# applied-ai

./: README.md  course-overview.md
projects/Sensorium/: LICENSE  README.md  pyproject.toml
projects/Sensorium/docs/: images_similarities.md
projects/Sensorium/results/: Grouped_Duplicate_Per_Video.csv  classification_table.csv  classification_table_naming.csv  combined_metadata_dynamic29156-11-10-Video-8744edeac3b4d1ce16b680916b5267ce.json  combined_metadata_dynamic29228-2-10-Video-8744edeac3b4d1ce16b680916b5267ce.json  combined_metadata_dynamic29234-6-9-Video-8744edeac3b4d1ce16b680916b5267ce.json  combined_metadata_dynamic29513-3-5-Video-8744edeac3b4d1ce16b680916b5267ce.json  combined_metadata_dynamic29514-2-9-Video-8744edeac3b4d1ce16b680916b5267ce.json  label_mismatch_report.json  label_mismatch_report.txt  merged_videos.csv
projects/Sensorium/scripts/: create_combined_metadata.py  manage.py  manipulate_videos.py  run_classification_naming.ipynb
projects/Sensorium/src/: data_labelling.py  exploration_class.py
projects/Sensorium/webapp/: data_loader.py  loader.py  project_urls.py  urls.py  views.py
projects/Sensorium/webapp/static/webapp/css/: style.css
projects/Sensorium/webapp/static/webapp/js/: main.js  plotting.js
projects/Sensorium/webapp/templates/webapp/: index.html
projects/Sensorium/webapp/utils/: __init__.py
projects/Sensorium/webapp/webapp/: asgi.py  data_loader.py  db.sqlite3  project_urls.py  settings.py  wsgi.py
projects/Sensorium/webapp/webapp/templates/webapp/: index.html
projects/Sensorium/webapp/webapp/utils/: video_converter.py
(+2 files in other folders)
